[metadata]
name = pyfirestation
description = PyFireStation
author = João Aveiro, Daniel Neves, Jaime Oliveira da Silva
version = attr: pyfirestation.__version__
license = GPLv3
license_files = LICENSE.txt
platforms = unix, linux, osx, cygwin, win32
url = https://github.com/PyFireCoimbra/PyFireStation
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages =
    pyfirestation
install_requires =
    numpy>=1.22
    pydantic>=1.9
    scipy>=1.8
    xarray>=2022.3
python_requires =
    >=3.8
package_dir =
    =src
zip_safe =
    no

[options.entry_points]
console_scripts =
    pyfirestation = pyfirestation.main:main
